@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021 Airbyte, Inc., all rights reserved.
+ * Copyright (c) 2022 Airbyte, Inc., all rights reserved.
  */
 
 package io.airbyte.integrations.source.mongodb;
@@ -13,7 +13,6 @@ import io.airbyte.commons.functional.CheckedConsumer;
 import io.airbyte.commons.json.Jsons;
 import io.airbyte.commons.util.AutoCloseableIterator;
 import io.airbyte.commons.util.AutoCloseableIterators;
-import io.airbyte.db.Databases;
 import io.airbyte.db.mongodb.MongoDatabase;
 import io.airbyte.db.mongodb.MongoUtils;
 import io.airbyte.db.mongodb.MongoUtils.MongoInstanceType;
@@ -81,7 +80,7 @@ public class MongoDbSource extends AbstractDbSource<BsonType, MongoDatabase> {
   @Override
   protected MongoDatabase createDatabase(final JsonNode config) throws Exception {
     final var dbConfig = toDatabaseConfig(config);
-    return Databases.createMongoDatabase(dbConfig.get("connectionString").asText(),
+    return new MongoDatabase(dbConfig.get("connectionString").asText(),
         dbConfig.get("database").asText());
   }
 
@@ -116,11 +115,7 @@ public class MongoDbSource extends AbstractDbSource<BsonType, MongoDatabase> {
 
     for (final String collectionName : getAuthorizedCollections(database)) {
       final MongoCollection<Document> collection = database.getCollection(collectionName);
-      final Map<String, BsonType> uniqueFields = MongoUtils.getUniqueFields(collection);
-
-      final List<CommonField<BsonType>> fields = uniqueFields.keySet().stream()
-          .map(field -> new CommonField<>(field, uniqueFields.get(field)))
-          .collect(Collectors.toList());
+      final List<CommonField<BsonType>> fields = MongoUtils.getUniqueFields(collection).stream().map(MongoUtils::nodeToCommonField).toList();
 
       // The field name _id is reserved for use as a primary key;
       final TableInfo<CommonField<BsonType>> tableInfo = TableInfo.<CommonField<BsonType>>builder()
@@ -135,7 +130,7 @@ public class MongoDbSource extends AbstractDbSource<BsonType, MongoDatabase> {
     return tableInfos;
   }
 
-  private Set<String> getAuthorizedCollections(MongoDatabase database) {
+  private Set<String> getAuthorizedCollections(final MongoDatabase database) {
     /*
      * db.runCommand ({listCollections: 1.0, authorizedCollections: true, nameOnly: true }) the command
      * returns only those collections for which the user has privileges. For example, if a user has find
@@ -143,7 +138,7 @@ public class MongoDbSource extends AbstractDbSource<BsonType, MongoDatabase> {
      * find or any other action, on the database resource, the command lists all collections in the
      * database.
      */
-    Document document = database.getDatabase().runCommand(new Document("listCollections", 1)
+    final Document document = database.getDatabase().runCommand(new Document("listCollections", 1)
         .append("authorizedCollections", true)
         .append("nameOnly", true))
         .append("filter", "{ 'type': 'collection' }");
@@ -240,5 +235,8 @@ public class MongoDbSource extends AbstractDbSource<BsonType, MongoDatabase> {
     }
     return connectionStrBuilder.toString();
   }
+
+  @Override
+  public void close() throws Exception {}
 
 }
